// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Icon /> accepts size as a prop 1`] = `
<i
  className="material-icons large"
>
  cloud
</i>
`;

exports[`<Icon /> renders an icon 1`] = `
<i
  className="material-icons"
>
  cloud
</i>
`;
